@@ -8,8 +8,10 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 = Code =
 * Added `excerpt_more_link` and attached to `excerpt_more` filter
 * Added `anchor_title_text` for use with `excerpt_more_link` and permalinks in the post meta details
+* Added additional list wrapper around each comment type
 * Added Breadcrumbs trails to pages and posts
 * Created Header class
+* Fixed comments (only) count output
 * Limit width generated by "Full Size Video" JavaScript to a maximum of 1000px
 * Refactored Structures class to put `site_title`, `site_description`, and `custom_header_image` into Header class
 * Refactored `opus-primus-header` to reflect class/method changes of Structures and Header
